# youtube-playlists

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
youtube_playlists/: main.py  split_playlist_progress.json
