[tool.poetry]
name = "youtube-playlists"
version = "0.1.0"
description = ""
authors = ["Chris Birch <datapointchris@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dataset = "^1.6.2"
google-auth-oauthlib = "^1.2.1"
google-api-python-client = "^2.146.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
black = "^24.8.0"
flake8 = "^7.1.1"
pytest = "^8.3.3"
pre-commit = "^3.8.0"
pytest-cov = "^5.0.0"
bandit = "^1.7.9"
mypy = "^1.11.2"
isort = "^5.13.2"

# ---------- Configurations ---------- #

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B311"]

[tool.black]
line-length = 120
skip-string-normalization = true
exclude = '''
(
/alembic
| .git
| .mypy_cache
| .venv
| build
| dist
)
'''

[tool.codespell]
skip = '*.css.map,*.ipynb'
ignore-words-list = "astroid,aNULL,ANULL,anull"
check-filenames = true
# count = ""
# quiet-level = 3

[tool.isort]
line_length = 120
profile = "black"
atomic = true
skip = [".gitignore"]
extend_skip = [".md", ".json"]

[tool.mypy]
pretty = true
ignore_missing_imports = true
# strict = true
allow_untyped_defs = true
check_untyped_defs = false
warn_return_any = false

[tool.refurb]
enable_all = true

[tool.ruff]
line-length = 120
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"env.py" = ["F401"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
